--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "The World as A Stage",
   "short_name": "The World as A Stage",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/hugofr/",
+  "scope": "/hugofr/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/favicon.svg",
+      "src": "/hugofr/favicon.svg",
       "sizes": "512x512"
     }
   ]
