--- a/hugo.toml
+++ b/hugo.toml
@@ -8,9 +8,9 @@ theme = "hugo-book"
 # Always put it on the top of the configuration file, otherwise it won't work
 googleAnalytics = "UA-XXXXXXXXX-X"
 
-# # (Optional) If you provide a Disqus shortname, comments will be enabled on
-# # all pages.
-# disqusShortname = "my-site"
+# (Optional) If you provide a Disqus shortname, comments will be enabled on
+# all pages.
+disqusShortname = "the-world-as-a-stage"
 
 # (Optional) Set this to true if you use capital letters in file names
 disablePathToLower = true
@@ -22,10 +22,6 @@ enableGitInfo = true
 # (Optional) Theme is intended for documentation use, therefore it doesn't render taxonomy.
 # You can remove related files with config below
 disableKinds = ['taxonomy', 'taxonomyTerm']
-
-[services]
-  [services.disqus]
-    shortname = 'the-world-as-a-stage'
 
 [caches]
   [caches.images]
