--- a/hugo.toml
+++ b/hugo.toml
@@ -10,7 +10,7 @@ googleAnalytics = "UA-XXXXXXXXX-X"
 
 # (Optional) If you provide a Disqus shortname, comments will be enabled on
 # all pages.
-disqusShortname = "the-world-as-a-stage"
+disqusShortname = "the-world-as-a-stage-1"
 
 # (Optional) Set this to true if you use capital letters in file names
 disablePathToLower = true
